# mach30

./: .gitignore  README.md  pyproject.toml  test.sh
mach30/: __init__.py  builder.py  enums.py  gcode.py  gcode_basic.py  helpers.py  mcode.py  modal_code.py  models.py
mach30/lathe/: enums.py
mach30/mill/: builder.py  enums.py  gcode.py  gcode_basic.py  mcode.py  modal_code.py  models.py
tests/: test_homework2.py  test_homework3.py  test_homework4.py  test_homework5.py  test_homework6.py  test_homework7.py  test_homework8.py  test_moves.py
